✨Enchanced README.md

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -1,2 +1,11 @@
-#<%= name %>
+#<%= name %>[![NPM version][npm-image]][npm-url] [![Build Status][travis-image]][travis-url] [![Dependency Status][daviddm-image]][daviddm-url] [![Coverage percentage][coveralls-image]][coveralls-url]
 <%= descr %>
+
+[npm-image]: https://badge.fury.io/js/generator-node-next.svg
+[npm-url]: https://npmjs.org/package/generator-node-next
+[travis-image]: https://travis-ci.org/sh7dm/generator-node-next.svg?branch=master
+[travis-url]: https://travis-ci.org/sh7dm/generator-node-next
+[daviddm-image]: https://david-dm.org/sh7dm/generator-node-next.svg?theme=shields.io
+[daviddm-url]: https://david-dm.org/sh7dm/generator-node-next
+[coveralls-image]: https://coveralls.io/repos/sh7dm/generator-node-next/badge.svg
+[coveralls-url]: https://coveralls.io/r/sh7dm/generator-node-next
