❤️ Valentine's day update (updated readmes)

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -1,5 +1,6 @@
 #<%= name %>[![NPM version][npm-image]][npm-url] [![Build Status][travis-image]][travis-url] [![Dependency Status][daviddm-image]][daviddm-url] [![Coverage percentage][coveralls-image]][coveralls-url]
-<%= descr %>
+><%= descr %>
+[![forthebadge](https://forthebadge.com/images/badges/built-with-love.svg)](https://forthebadge.com)
 
 [npm-image]: https://badge.fury.io/js/generator-node-next.svg
 [npm-url]: https://npmjs.org/package/generator-node-next
