--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -2,11 +2,11 @@
 ><%= descr %>
 [![forthebadge](https://forthebadge.com/images/badges/built-with-love.svg)](https://forthebadge.com)
 
-[npm-image]: https://badge.fury.io/js/generator-node-next.svg
-[npm-url]: https://npmjs.org/package/generator-node-next
-[travis-image]: https://travis-ci.org/sh7dm/generator-node-next.svg?branch=master
-[travis-url]: https://travis-ci.org/sh7dm/generator-node-next
-[daviddm-image]: https://david-dm.org/sh7dm/generator-node-next.svg?theme=shields.io
-[daviddm-url]: https://david-dm.org/sh7dm/generator-node-next
-[coveralls-image]: https://coveralls.io/repos/sh7dm/generator-node-next/badge.svg
-[coveralls-url]: https://coveralls.io/r/sh7dm/generator-node-next
+[npm-image]: https://badge.fury.io/js/<%= name %>.svg
+[npm-url]: https://npmjs.org/package/<%= name %>
+[travis-image]: https://travis-ci.org/<%= author %>/<%= name %>.svg?branch=master
+[travis-url]: https://travis-ci.org/<%= author %>/<%= name %>
+[daviddm-image]: https://david-dm.org/<%= author %>/<%= name %>.svg?theme=shields.io
+[daviddm-url]: https://david-dm.org/<%= author %>/<%= name %>
+[coveralls-image]: https://coveralls.io/repos/<%= author %>/<%= name %>/badge.svg
+[coveralls-url]: https://coveralls.io/r/<%= author %>/<%= name %>
