--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -2,6 +2,7 @@
 ><%= descr %>
 [![forthebadge](https://forthebadge.com/images/badges/built-with-love.svg)](https://forthebadge.com)
 
+<!--- If badges aren't working, fix links below --->
 [npm-image]: https://badge.fury.io/js/<%= name %>.svg
 [npm-url]: https://npmjs.org/package/<%= name %>
 [travis-image]: https://travis-ci.org/<%= author %>/<%= name %>.svg?branch=master
