chore: update AVA to 1.0.0-rc.2
update AVA to 1.0.0-rc.2, compile TS tests on the fly

fix #11

--- a/generators/ts-app/templates/package.json.ejs
+++ b/generators/ts-app/templates/package.json.ejs
@@ -11,19 +11,28 @@
 			<% if (runner == "jest") { %>
 		    "test:unit": "jest",
 			<% } else { %>
-        "test:unit": "tsc --lib es2015 test/*.ts && ava && rimraf test/*.js",
+        "test:unit": "ava",
 		  <% } %>
 		<% } %>
     "test": "yarn run test:lint; yarn run test:safety; <% if (unit) { %>yarn run test:unit <% } %>",
     "build": "backpack build",
     "prepublish": "yarn run test"
 	},
+  "ava": {
+    "compileEnhancements": false,
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
+  },
 	"author": "<%= author %>",
   "license": "MIT",
 	"devDependencies": {
     <% if (unit && runner == "ava") { %>
-      "ava": "^0.25.0",
-      "rimraf": "^2.6.2",
+      "ava": "^1.0.0-rc.2"
+      "ts-node": "^7.0.1",
     <% } %>
 		"awesome-typescript-loader": "^5.2.1",
 		"backpack-core": "^0.5.0",
