--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -21,7 +21,7 @@
 	"author": "<%= author %>",
 	"license": "MIT",
 	"devDependencies": {
-    <% if (unit && runner == "ava") { %>"ava": "^0.25.0",<% } %>
+    <% if (unit && runner == "ava") { %>"ava": "^1.0.0-rc.2",<% } %>
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.1",
     <% if (unit && runner == "jest") { %>"babel-jest": "^22.2.2",<% } %>
